# leadgen-app

./: README.md  design_document  pyproject.toml
app/: .env  main.py
app/db/: initialize_db.py  models.py  session.py
app/routers/: router.py
app/schemas/: schemas.py
app/services/: services.py
